--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,21 @@
 name: Deploy FastAPI Project
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
       - main
+# on:
+#   pull_request:
+#     types:
+#       - closed
+#     branches:
+#       - main
 
 jobs:
   deploy:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
       - name: Deploy Application
         env:
           PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -25,13 +27,11 @@ jobs:
 
           trap "rm -f privatekey.pem" EXIT
 
-          ssh -o StrictHostKeyChecking=no -i privatekey.pem ${USER_NAME}@${HOST_NAME} '
-            cd ~/task2 || { echo "Failed to navigate to ~/task2"; exit 1; }
-            git pull || { echo "Failed to pull latest code"; exit 1; }
-
-            source venv/bin/activate || { echo "Failed to activate virtual environment"; exit 1; }
-            pip install -r requirements.txt || { echo "Failed to install requirements"; exit 1; }
-
-          
-            ps aux | grep [u]vicorn | awk '\''{ print $2 }'\'' | xargs kill -HUP
-          '
+          ssh -o StrictHostKeyChecking=no -i privatekey.pem ${USER_NAME}@${HOST_NAME}' << 'EOF'
+            cd ~/task2
+            git pull origin main
+            source venv/bin/activate
+            pip install -r requirements.txt
+            sudo service fastapi restart
+            sudo service nginx restart
+          EOF
